import {TranslationKeys} from '@types';

export const en: TranslationKeys = {
  weatherScreen: {
    searchCity: 'Search city...',
    currentLocation: 'Current location',
    weather: 'Weather',
  },
  weatherDetailsScreen: {
    humidity: 'Humidity',
    pressure: 'Pressure',
    windSpeed: 'Wind Speed',
    cloudCover: 'Cloud Cover',
    details: 'Weather Details',
  },
  general: {
    noResults: 'No results found',
    serviceUnavailableWithRefresh:
      'Unfortunately service is currently not available. Please pull to refresh',
    serviceUnavailable:
      'Unfortunately service is currently unavailable. Please try again later',
    somethingWentWrong: 'Something went wrong',
    pleasePullToRefresh: 'Please pull to refresh',
  },
};
