appId: 'org.reactjs.native.example.HardcoreWeather'
---
- launchApp
- tapOn:
    id: "weather-item-warsaw"
- assertVisible: "Humidity"
- assertVisible: "Pressure"
- tapOn: "Weather"
